--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="normalize.css">
+    <title>Online Zoo</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <div class="logo">
+                    <h1 class="logo__title">PetStory online</h1>
+                </div>
+                <nav class="navigation">
+                    <ul class="navigation__list">
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">About</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Map</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Zoos</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Donate</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Contact us</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="designed">
+                    <span class="designed__text">Designed by ©</span>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
