feat: html block backstage, watch

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header__inner">
                 <div class="logo">
-                    <h1 class="logo__title">PetStory online</h1>
+                    <h1 class="title logo__title">PetStory online</h1>
                 </div>
                 <nav class="navigation">
                     <ul class="navigation__list">
@@ -40,5 +40,50 @@
             </div>
         </div>
     </header>
+    <main class="main">
+        <section class="watch">
+            <div class="container">
+                <div class="watch__inner">
+                    <div class="watch__box">
+                        <div class="watch__cirle"></div>
+                        <h2 class=" title watch__title">Watch your 
+                            <span class="watch__title--orange">favorite</span> 
+                            animal online
+                        </h2>    
+                    </div>
+                    <button class="btn watch__btn">wath online</button>
+                </div>
+            </div>
+        </section>
+        <section class="backstage">
+            <div class="container">
+                <div class="backstage_inner">
+                    <div class="backstage__wrap">
+                        <div class="backstage__box">
+                            <picture class="backstage__picture">
+                                <source class="backstage__picture-img" srcset="../../assets/images/bamboo-cap.jpg" media="min-width: 1001px">
+                                <img src="../../assets/images/bamboo-cap.jpg" alt="old man">
+                            </picture>
+                        </div>
+                        <div class="backstage__box">
+                            <div class="backstage__content">
+                                <h2 class="backstage__title title">The Backstage of the Wilderness World.</h2>
+                                <p class="backstage__text"></p>
+                            </div>
+                            <div class="backstage__content">
+                                <h3 class="backstage__title title">How it works </h3>
+                                <p class="backstage__text backstage__text--font">
+                                    he main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="backstage__flower">
+                        <img class="backstage__flower-img" src="../../assets/images/flower_foto1.jpg" alt="flower">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
