feat: html block, footer, testimonials, pick

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -157,6 +157,188 @@
                 </div>
             </div>
         </section>
+        <section class="pick">
+            <div class="container">
+                <div class="pick__inner">
+                    <h2 class="pick__title title">Pick and feed a friend</h2>
+                    <p class="pick__subtitle">We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
+                    <p class="pick__text">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
+                    <p class="pick__text">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our Emergency Support Fund . </p>
+                    <div class="works">
+                        <h3 class="title works__title">How it works</h3>
+                        <div class="works__wrap">
+                            <div class="works__box">
+                                <div class="works__contrainer">
+                                    <img class="works__contrainer-img" src="../../assets/images/hand_pay.svg" alt="hand__pay">
+                                </div>
+                                <h6 class="title works__box-title">Pay with card</h6>
+                            </div>
+                            <div class="works__arrow">
+                                <img class="works__arrow-img" src="../../assets/images/arrow.svg" alt="arrow">
+                            </div>
+                            <div class="works__box">
+                                <div class="works__contrainer">
+                                    <img class="works__contrainer-img" src="../../assets/images/hand flower.svg" alt="hand__pay">
+                                </div>
+                                <h6 class="title works__box-title">Payment goes to the zoo</h6>
+                            </div>
+                            <div class="works__arrow">
+                                <img class="works__arrow-img" src="../../assets/images/arrow.svg" alt="arrow">
+                            </div>
+                            <div class="works__box">
+                                <div class="works__contrainer">
+                                    <img class="works__contrainer-img" src="../../assets/images/monkey.svg" alt="hand__pay">
+                                </div>
+                                <h6 class="title works__box-title">Your favourite animal gets delicious dish</h6>
+                            </div>
+                        </div>
+                        <button class="btn pick__btn">Feed a friend now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="testimonials">
+            <div class="container">
+                <div class="testimonials__inner">
+                    <h2 class="title testimonials__title">Testimonials</h2>
+                    <div class="testimonials__wrap">
+                        <div class="testimonials__box">
+                            <div class="testimonials__box-row">
+                                <div class="testimonials__icon">
+                                    <img class="testimonials__icon-img" src="../../assets/images/profil.svg" alt="avatar">
+                                </div>
+                                <div class="testimonials__container-title">
+                                    <h6 class="title testimonials__title">Michael John </h6>
+                                    <p class="testimonials__subtitle">
+                                        Local Austria <span class="testimonials__subtitle--where">Today</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="testimonials__box-row">
+                                <p class="testimonials__content">
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonials__box">
+                            <div class="testimonials__box-row">
+                                <div class="testimonials__icon">
+                                    <img class="testimonials__icon-img" src="../../assets/images/oscar.png" alt="avatar">
+                                </div>
+                                <div class="testimonials__container-title">
+                                    <h6 class="title testimonials__title">Oskar Samborsky </h6>
+                                    <p class="testimonials__subtitle">
+                                        Local Austria <span class="testimonials__subtitle--where">Yesterday</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="testimonials__box-row">
+                                <p class="testimonials__content">
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonials__box">
+                            <div class="testimonials__box-row">
+                                <div class="testimonials__icon">
+                                    <img class="testimonials__icon-img" src="../../assets/images/fredericka.png" alt="avatar">
+                                </div>
+                                <div class="testimonials__container-title">
+                                    <h6 class="title testimonials__title">Fredericka Michelin </h6>
+                                    <p class="testimonials__subtitle">
+                                        Local Austria <span class="testimonials__subtitle--where">Yesterday</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="testimonials__box-row">
+                                <p class="testimonials__content">
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonials__box">
+                            <div class="testimonials__box-row">
+                                <div class="testimonials__icon">
+                                    <img class="testimonials__icon-img" src="../../assets/images/mila.png" alt="avatar">
+                                </div>
+                                <div class="testimonials__container-title">
+                                    <h6 class="title testimonials__title">Mila Riksha </h6>
+                                    <p class="testimonials__subtitle">
+                                        Local Austria <span class="testimonials__subtitle--where">Yesterday</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="testimonials__box-row">
+                                <p class="testimonials__content">
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                </p>
+                            </div>
+                        </div>
+                        <span class="testimonials__scroollbar">scrolbar</span>
+                    </div>
+                    <button class="btn testimonials__btn">leave feedback</button>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <div class="footer__box">
+                    <div class="logo">
+                        <h1 class="title logo__title">PetStory online</h1>
+                    </div>
+                    <button class="btn footer__btn">donate for volunteers</button>
+                    <ul class="footer__list-contact">
+                        <li class="footer__item-contact">
+                            <a href="#" class="footer__contact-link">Facebook</a>
+                        </li>
+                        <li class="footer__item-contact">
+                            <a href="#" class="footer__contact-link">Twitter</a>
+                        </li>
+                        <li class="footer__item-contact">
+                            <a href="#" class="footer__contact-link">Instagram</a>
+                        </li>
+                        <li class="footer__item-contact">
+                            <a href="#" class="footer__contact-link">YouTube</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__box">
+                    <ul class="navigation__list">
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">About</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Map</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Zoos</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Contact us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__box">
+                    <h3 class="title footer__title">Subscribe to our news</h3>
+                    <div class="footer__enter">
+                        <input class="footer__input" type="email" placeholder="Enter your email">
+                        <button class="footer__enter-btn">Submit</button>
+                        <p class="footer__text-avtor">
+                            Designed by Alisa Samborskaya
+                        </p>
+                        <p class="footer__text-avtor">
+                            ©RSSchool & ©Yem Digital 2021
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
