--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="sass/style.css">
     <title>Online Zoo</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header__inner">
                 <div class="logo">
-                    <h1 class="title logo__title">PetStory online</h1>
+                    <h1 class="title logo__title">PetStory <br> online</h1>
                 </div>
                 <nav class="navigation">
                     <ul class="navigation__list">
