--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -45,10 +45,9 @@
             <div class="container">
                 <div class="watch__inner">
                     <div class="watch__box">
-                        <div class="watch__cirle"></div>
-                        <h2 class=" title watch__title">Watch your 
-                            <span class="watch__title--orange">favorite</span> 
-                            animal online
+                        <h2 class=" title watch__title">Watch <br> your <br>
+                            <span class="watch__title--orange">favorite</span> <br> 
+                            animal <br> online
                         </h2>    
                     </div>
                     <button class="btn watch__btn">wath online</button>
