--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -67,7 +67,7 @@
                         <div class="backstage__box">
                             <div class="backstage__content">
                                 <h2 class="backstage__title title">The Backstage of the Wilderness World.</h2>
-                                <p class="backstage__text"></p>
+                                <p class="backstage__text">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
                             </div>
                             <div class="backstage__content">
                                 <h3 class="backstage__title title">How it works </h3>
@@ -77,9 +77,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="backstage__flower">
-                        <img class="backstage__flower-img" src="../../assets/images/flower_foto1.jpg" alt="flower">
-                    </div>
+                </div>
+                <div class="backstage__flower">
+                    <img class="backstage__flower-img" src="../../assets/images/flower_foto1.jpg" alt="flower">
                 </div>
             </div>
         </section>
