feat: add style slider

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -84,7 +84,6 @@
             </div>
         </section>
         <section class="slider">
-            <div class="container">
                 <div class="slider__inner">
                     <div class="slider__wrap">
                         <button class="slider__pagination btn">
@@ -92,58 +91,60 @@
                                 <path d="M5.00179 9.10745L5.10646 9.2094L5.21112 9.10745L5.35128 8.97092L5.46159 8.86347L5.35128 8.75602L1.74841 5.24656L17 5.24656H17.15V5.09656V4.90344V4.75344H17L1.74878 4.75344L5.35129 1.24398L5.46158 1.13653L5.35128 1.02909L5.21112 0.892552L5.10646 0.790595L5.00179 0.892553L0.895334 4.89275L0.785027 5.0002L0.895338 5.10764L5.00179 9.10745Z" fill="white" stroke="white" stroke-width="0.3"/>
                             </svg>                            
                         </button>
-                        <div class="slide">
-                            <div class="slide__box">
-                                <img class="slide__box-img" src="../../assets/images/slider/panda 1.jpg" alt="panda">
+                        <div class="slide__container">
+                            <div class="slide">
+                                <div class="slide__box">
+                                    <img class="slide__box-img" src="../../assets/images/slider/panda 1.jpg" alt="panda">
+                                </div>
+                                <div class="slide__content bamboo banan meat fish">
+                                    <h5 class="title slide__title">giant Pandas</h5>
+                                    <p class="subtitle">Native to Southwest China</p>
+                                </div>
                             </div>
-                            <div class="slide__content">
-                                <h5 class="title slide__title">giant Pandas</h5>
-                                <p class="subtitle">Native to Southwest China</p>
+                            <div class="slide">
+                                <div class="slide__box">
+                                    <img class="slide__box-img" src="../../assets/images/slider/eagles 2.svg" alt="Eagles">
+                                </div>
+                                <div class="slide__content">
+                                    <h5 class="title slide__title">Eagles</h5>
+                                    <p class="subtitle">Native to South America</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="slide">
-                            <div class="slide__box">
-                                <img class="slide__box-img" src="../../assets/images/slider/eagles 2.svg" alt="Eagles">
+                            <div class="slide">
+                                <div class="slide__box">
+                                    <img class="slide__box-img" src="../../assets/images/slider/corilla 3.jpg" alt="Gorillas">
+                                </div>
+                                <div class="slide__content">
+                                    <h5 class="title slide__title">Gorillas</h5>
+                                    <p class="subtitle">Native to Congo</p>
+                                </div>
                             </div>
-                            <div class="slide__content">
-                                <h5 class="title slide__title">Eagles</h5>
-                                <p class="subtitle">Native to South America</p>
+                            <div class="slide">
+                                <div class="slide__box">
+                                    <img class="slide__box-img" src="../../assets/images/slider/sloth 4.svg" alt="Sloth">
+                                </div>
+                                <div class="slide__content">
+                                    <h5 class="title slide__title">Two-toed Sloth</h5>
+                                    <p class="subtitle">Mesoamerica, South America</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="slide">
-                            <div class="slide__box">
-                                <img class="slide__box-img" src="../../assets/images/slider/corilla 3.jpg" alt="Gorillas">
+                            <div class="slide">
+                                <div class="slide__box">
+                                    <img class="slide__box-img" src="../../assets/images/slider/cheetahs 5.jpg" alt="cheetahs">
+                                </div>
+                                <div class="slide__content">
+                                    <h5 class="title slide__title">cheetahs</h5>
+                                    <p class="subtitle">Native to Africa</p>
+                                </div>
                             </div>
-                            <div class="slide__content">
-                                <h5 class="title slide__title">Gorillas</h5>
-                                <p class="subtitle">Native to Congo</p>
-                            </div>
-                        </div>
-                        <div class="slide">
-                            <div class="slide__box">
-                                <img class="slide__box-img" src="../../assets/images/slider/sloth 4.svg" alt="Sloth">
-                            </div>
-                            <div class="slide__content">
-                                <h5 class="title slide__title">Two-toed Sloth</h5>
-                                <p class="subtitle">Mesoamerica, South America</p>
-                            </div>
-                        </div>
-                        <div class="slide">
-                            <div class="slide__box">
-                                <img class="slide__box-img" src="../../assets/images/slider/cheetahs 5.jpg" alt="cheetahs">
-                            </div>
-                            <div class="slide__content">
-                                <h5 class="title slide__title">cheetahs</h5>
-                                <p class="subtitle">Native to Africa</p>
-                            </div>
-                        </div>
-                        <div class="slide">
-                            <div class="slide__box">
-                                <img class="slide__box-img" src="../../assets/images/slider/penguins.jpg" alt="Penguins">
-                            </div>
-                            <div class="slide__content">
-                                <h5 class="title slide__title">Penguins</h5>
-                                <p class="subtitle">Native to Antarctica</p>
+                            <div class="slide">
+                                <div class="slide__box">
+                                    <img class="slide__box-img" src="../../assets/images/slider/penguins.jpg" alt="Penguins">
+                                </div>
+                                <div class="slide__content">
+                                    <h5 class="title slide__title">Penguins</h5>
+                                    <p class="subtitle">Native to Antarctica</p>
+                                </div>
                             </div>
                         </div>
                         <button class="slider__pagination btn">
@@ -152,9 +153,18 @@
                             </svg>
                         </button>
                     </div>
-                    <button class="btn slider__btn">choose your favorite</button>
                 </div>
-            </div>
+                <div class="container">
+                    <div class="btn__wrap">
+                        <button class="btn slider__btn ">choose your favorite</button>
+                    </div>
+                </div>
+                <div class="slider__wrap-flower">
+                    <img class="slider__flower" src="../../assets/images/palm_foto.jpg" alt="flower">
+                </div>
+                <div class="slider__wrap-flower slider__wrap-flower--right">
+                    <img class="slider__flower" src="../../assets/images/strelitzia 1.jpg" alt="flower">
+                </div>
         </section>
         <section class="pick">
             <div class="container">
