feat: style block pick

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -172,7 +172,7 @@
                     <h2 class="pick__title title">Pick and feed a friend</h2>
                     <p class="pick__subtitle">We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
                     <p class="pick__text">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
-                    <p class="pick__text">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our Emergency Support Fund . </p>
+                    <p class="pick__text pick__text--weight">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider <br> a gift to our Emergency Support Fund . </p>
                     <div class="works">
                         <h3 class="title works__title">How it works</h3>
                         <div class="works__wrap">
@@ -201,7 +201,9 @@
                                 <h6 class="title works__box-title">Your favourite animal gets delicious dish</h6>
                             </div>
                         </div>
-                        <button class="btn pick__btn">Feed a friend now</button>
+                        <div class="pick__btn-container">
+                            <button class="btn pick__btn">Feed a friend now</button>
+                        </div>
                     </div>
                 </div>
             </div>
