feat: add style footer

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -289,10 +289,12 @@
                                 </p>
                             </div>
                         </div>
-                        <span class="testimonials__scroollbar">scrolbar</span>
                     </div>
-                    <button class="btn testimonials__btn">leave feedback</button>
+                    <div class="testimonials__scroollbar">
+                        <span class="testimonials__scroollbar-slider"></span>
+                    </div>
                 </div>
+                <button class="btn testimonials__btn">leave feedback</button>
             </div>
         </section>
     </main>
@@ -301,20 +303,24 @@
             <div class="footer__inner">
                 <div class="footer__box">
                     <div class="logo">
-                        <h1 class="title logo__title">PetStory online</h1>
+                        <h1 class="title logo__title">PetStory <br> online</h1>
                     </div>
                     <button class="btn footer__btn">donate for volunteers</button>
                     <ul class="footer__list-contact">
                         <li class="footer__item-contact">
+                            <i class="fa-brands fa-facebook-f"></i>
                             <a href="#" class="footer__contact-link">Facebook</a>
                         </li>
                         <li class="footer__item-contact">
+                            <i class="fa-brands fa-twitter"></i>
                             <a href="#" class="footer__contact-link">Twitter</a>
                         </li>
                         <li class="footer__item-contact">
+                            <i class="fa-brands fa-instagram"></i>
                             <a href="#" class="footer__contact-link">Instagram</a>
                         </li>
                         <li class="footer__item-contact">
+                            <i class="fa-brands fa-youtube"></i>
                             <a href="#" class="footer__contact-link">YouTube</a>
                         </li>
                     </ul>
@@ -340,16 +346,17 @@
                     <div class="footer__enter">
                         <input class="footer__input" type="email" placeholder="Enter your email">
                         <button class="footer__enter-btn">Submit</button>
-                        <p class="footer__text-avtor">
+                      <!--   <p class="footer__text-avtor">
                             Designed by Alisa Samborskaya
                         </p>
                         <p class="footer__text-avtor">
                             ©RSSchool & ©Yem Digital 2021
-                        </p>
+                        </p> -->
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/78c2d78b1c.js" crossorigin="anonymous"></script>
 </body>
 </html>
