--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -296,6 +296,9 @@
                 </div>
                 <button class="btn testimonials__btn">leave feedback</button>
             </div>
+            <div class="leav__container">
+                <img class="leav__foto" src="../../assets/images/leav_foto.png" alt="flower">
+            </div>
         </section>
     </main>
     <footer class="footer">
@@ -342,18 +345,23 @@
                     </ul>
                 </div>
                 <div class="footer__box">
-                    <h3 class="title footer__title">Subscribe to our news</h3>
-                    <div class="footer__enter">
-                        <input class="footer__input" type="email" placeholder="Enter your email">
-                        <button class="footer__enter-btn">Submit</button>
-                      <!--   <p class="footer__text-avtor">
+                    <div class="wrap">
+                        <h3 class="title footer__title">Subscribe to our news</h3>
+                        <div class="footer__enter">
+                            <input class="footer__input" type="email" placeholder="Enter your email">
+                            <button class="footer__enter-btn">Submit</button>
+                        </div>
+                    </div>
+                    <div class="footer__dev-link">
+                        <p class="footer__text-avtor">
                             Designed by Alisa Samborskaya
                         </p>
                         <p class="footer__text-avtor">
                             ©RSSchool & ©Yem Digital 2021
-                        </p> -->
+                        </p>
                     </div>
                 </div>
+               
             </div>
         </div>
     </footer>
